--- a/css/LilianFeb.css
+++ b/css/LilianFeb.css
@@ -1,4 +1,4 @@
-/* @import url('//../fonts/LilianFeb.otf'); */
+@import url('//fonts.googleapis.com/css?family=Incosolata');
 
 @font-face {
     font-family: "LilianFeb";
