--- a/css/Tangerine.css
+++ b/css/Tangerine.css
@@ -1,6 +1,6 @@
 @import url('//fonts.googleapis.com/css?family=Tangerine|Incosolata');
 
-body {
+p {
 	font-family: 'Tangerine', sans-serif;
 }
 code, pre {
