--- a/css/LilianFeb.css
+++ b/css/LilianFeb.css
@@ -2,12 +2,12 @@
 
 @font-face {
     font-family: "LilianFeb";
-    src: url('fonts/Lilianfeb-Regular.ttf')  format("truetype");
-         /* url('fonts/Lilianfeb-Regular.otf')  format("opentype"), */
-         /* url('fonts/Lilianfeb-Regular.woff') format('woff'); */
+    src: url('fonts/LilianFeb-Regular.ttf')  format("truetype");
+         /* url('fonts/LilianFeb-Regular.otf')  format("opentype"), */
+         /* url('fonts/LilianFeb-Regular.woff') format('woff'); */
 }
 
-body {
+p {
     font-family: 'LilianFeb', sans-serif;
     font-size: 150%;
 }
