Add a text area to experiment with the font

--- a/css/Bootstrap.css
+++ b/css/Bootstrap.css
@@ -1,6 +1,6 @@
 @import url('//fonts.googleapis.com/css?family=Arimo|Roboto|Inconsolata');
 
-p {
+p, textarea {
 	pfont-family: 'Helvetica Neue', HelveticaNeue, 'TeX Gyre Heros', TeXGyreHeros, Roboto, FreeSans, 'Nimbus Sans L', 'Liberation Sans', Arimo, Helvetica, Arial, sans-serif;
 }
 code, pre {
