--- a/css/LilianMar.css
+++ b/css/LilianMar.css
@@ -1,16 +1,18 @@
-@import url('//fonts.googleapis.com/css?family=Incosolata');
-
 @font-face {
-    font-family: "LilianMar";
+    font-family: "LilianMar-Regular";
     src: url('fonts/LilianMar-Regular.ttf')  format("truetype"),
          url('fonts/LilianMar-Regular.otf')  format("opentype"),
          url('fonts/LilianMar-Regular.woff') format('woff');
 }
 
-p {
-    font-family: 'LilianMar', sans-serif;
+p, textarea {
+    font-family: 'LilianMar-Regular', sans-serif;
     font-size: 150%;
 }
+textarea {
+    letter-spacing: -0.14em;
+    word-spacing: -0.0em;
+}
 code, pre {
-	font-family: 'Inconsolata', 'Courier New', monospace;
+	font-family: 'Courier New', monospace;
 }
