--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,23 @@
 .noligatures {
-  -webkit-font-feature-settings: "liga" off, "hlig" off, "hist" off, "dlig" off,
-    "zero" off, "calt" off, "case" off, "swsh" off, "kern" off, "locl" off;
-  -moz-font-feature-settings: "liga" off, "hlig" off, "hist" off, "dlig" off,
-    "zero" off, "calt" off, "case" off, "swsh" off, "kern" off, "locl" off;
-  -ms-font-feature-settings: "liga" off, "hlig" off, "hist" off, "dlig" off,
-    "zero" off, "calt" off, "case" off, "swsh" off, "kern" off, "locl" off;
-  font-feature-settings: "liga" off, "hlig" off, "hist" off, "dlig" off,
-    "zero" off, "calt" off, "case" off, "swsh" off, "kern" off, "locl" off;
+    -webkit-font-feature-settings: "liga" off, "hlig" off, "hist" off, "dlig" off, "zero" off, "calt" off, "case" off, "swsh" off, "kern" off, "locl" off;
+    -moz-font-feature-settings: "liga" off, "hlig" off, "hist" off, "dlig" off, "zero" off, "calt" off, "case" off, "swsh" off, "kern" off, "locl" off;
+    -ms-font-feature-settings: "liga" off, "hlig" off, "hist" off, "dlig" off, "zero" off, "calt" off, "case" off, "swsh" off, "kern" off, "locl" off;
+    font-feature-settings: "liga" off, "hlig" off, "hist" off, "dlig" off, "zero" off, "calt" off, "case" off, "swsh" off, "kern" off, "locl" off;
 }
 .withligatures {
-  -webkit-font-feature-settings: "liga" on, "hlig" on, "hist" on, "dlig" on,
-    "zero" on, "calt" on, "swsh" on, "kern" on, "locl" on;
-  -moz-font-feature-settings: "liga" on, "hlig" on, "hist" on, "dlig" on,
-    "zero" on, "calt" on, "swsh" on, "kern" on, "locl" on;
-  -ms-font-feature-settings: "liga" on, "hlig" on, "hist" on, "dlig" on,
-    "zero" on, "calt" on, "swsh" on, "kern" on, "locl" on;
-  font-feature-settings: "liga" on, "hlig" on, "hist" on, "dlig" on, "zero" on,
-    "calt" on, "swsh" on, "kern" on, "locl" on;
+    -webkit-font-feature-settings: "liga" on, "hlig" on, "hist" on, "dlig" on, "zero" on, "calt" on, "swsh" on, "kern" on, "locl" on;
+    -moz-font-feature-settings: "liga" on, "hlig" on, "hist" on, "dlig" on, "zero" on, "calt" on, "swsh" on, "kern" on, "locl" on;
+    -ms-font-feature-settings: "liga" on, "hlig" on, "hist" on, "dlig" on, "zero" on, "calt" on, "swsh" on, "kern" on, "locl" on;
+    font-feature-settings: "liga" on, "hlig" on, "hist" on, "dlig" on, "zero" on, "calt" on, "swsh" on, "kern" on, "locl" on;
 }
 h1, h2 {
-  font-family: sans-serif;
+    font-family: sans-serif;
 }
 body {
-  font-size: 200%;
+    font-size: 200%;
+}
+textarea {
+    font-size: 2em;
+    height: 130px;
+    width: 90%;
 }
